# automatic

./: .gitignore  Makefile  Makefile.am  README.rst  automatic.scm  config.status  configure.ac  pre-inst-env
automatic/: afa.scm  dfa.scm  diagram.scm  graph.scm  presburger.scm  proposition.scm
examples/: afa.dot  dfa.dot
ml/: .ninja_log  _tag  build.ninja  configure.py
py3/: ninja_model.py  toolchain.py
rs/automatic/: Cargo.toml  README.rst
rs/automatic/src/: alphabet.rs  fa.rs  fol.rs  lib.rs  presburger.rs  tseitin.rs  utils.rs
scm/: Makefile.am  automatic.scm  conjunction.dot  memo_afa_conj_v2.txt
scm/automatic/: afa.scm  diagram.scm  presburger.scm  proposition.scm  utils.scm
scm/examples/: automatic.scm  cli.scm  dfa.dot
scm/resources/: afa_conj_proj_mod3is1_x_odd_y.dot~  afa_eq0.dot  afa_eq_lhs.dot  afa_mod3is1_x.dot  afa_odd_x.dot  afa_odd_y.dot  afa_proj_mod3is1_x.dot  afa_proj_odd_y.dot  cli_test.dot  conj_proj_mod3is1_x_odd_y.dot  eq1.dot  eq2.dot  eq3.dot  eq4.dot  eq5.dot  memo.txt  memo.txt~  memo_afa_conj_proj_mod3is1_x_odd_y.dot  memo_afa_conj_v2.txt  memo_afa_conj_v2.txt~  mod3is1_x.dot  mod3is2_x.dfa  odd_y.dot  old_memo.txt  proj_mod3is1_x.dot  proj_odd_y.dot  test.dot
scm/resources/big/: afa_conj_proj_mod3is1_x_odd_y.dot  afa_conj_proj_mod3is1_x_odd_y.dot~  mapping_afa_conj.txt
scm/tests/: afa.scm  automatic.scm  diagram.scm  graph.scm  proposition.scm  utils.scm
tests/: afa.scm  automatic.scm  dfa.scm  graph.scm  presburger.scm  proposition.scm
tex/: Makefile  algorithm.tex  alter.tex  introduction.tex  paper.bbl  paper.tex  prelim.tex
tex/beamer/: .ninja_log  build.ninja  configure.py  my_beamer.sty  slide.rst  slide.tex
tex/conference_presentation/: Makefile  main.org
tex/paper/: .ninja_log  algorithm.tex  alter.tex  build.ninja  configure.py  encoding.tex  introduction.tex  llncs.cls  paper.blg  paper.tex  prelim.tex  reference.bib
